# d7k

./: .gitignore  Recorder.py  bedo.py  main.py  online_calasification.py  pyproject.toml  simulate_audio_pipeline.py  test.py  test2.py  train.py
GUI/: Recorder.py  train.py
exported_templates/: word_templates.h
test.X/: DUMP.c  adc.c  adc.h  bedo.c  lcd.c  lcd.h  newmain.c  newmain1.c  newmain2.c  newmain3.c  uart.c  uart.h  word_templates.h
test.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-local-default.mk  configurations.xml  project.xml
test.X/nbproject/private/: configurations.xml  private.xml
