[project]
name = "temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard>=0.13.5",
    "librosa>=0.11.0",
    "numpy>=2.4.4",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pyserial>=3.5",
    "pyside6>=6.11.1",
    "sounddevice>=0.5.5",
]
